--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
       "WoocommerceFeaturedProduct\\": "src/"
     }
   },
-  "require": {}
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.59"
+  }
 }
